--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <nav id="navbar">
-  <header>JS Documentation
+  <header>JS Documentation  <em><h4 class="me">designed by Pooja reddy</h4> </em>
     <link rel="stylesheet" href="styles.css">
   </header>
   <ul>
